--- a/assets/style.css
+++ b/assets/style.css
@@ -9,6 +9,18 @@ html {
 * {
   padding: 0;
   margin: 0;
+  animation: animasiMasuk 1s alternate;
+}
+
+@keyframes animasiMasuk {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 @media (max-width: 762px) {
