--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,10 @@ html {
   margin: 0;
 }
 
+.hamburger {
+  display: none;
+}
+
 .logo h1 {
   cursor: pointer;
   transition: 0.5s ease-out;
@@ -36,7 +40,6 @@ header {
 
 header.sticky {
   transition: 0.5s ease-out;
-  box-shadow: 0 0 10px #000;
   background-color: #395b64;
 }
 
@@ -67,6 +70,20 @@ ul li a:hover {
   letter-spacing: 1px;
 }
 
+.hamburger {
+  cursor: pointer;
+}
+
+span {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: #e7f6f2;
+}
+
 main {
   height: 200vh;
   background-color: #2c3333;
@@ -75,8 +92,6 @@ main {
 @media screen and (max-width: 762px) {
   header .kontainer.headers {
     height: 10vh;
-    flex-direction: column;
-    justify-content: center;
     font-size: 0.7rem;
   }
 
@@ -87,6 +102,50 @@ main {
   nav li a {
     margin-top: 3px;
     font-size: 0.7rem;
+  }
+
+  .hamburger {
+    display: block;
+  }
+
+  .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  .hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+
+  .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+
+  ul {
+    margin-top: 15px;
+    display: flex;
+    position: fixed;
+    left: -100%;
+    top: 70px;
+    flex-direction: column;
+    background-color: transparent;
+    width: 100%;
+    text-align: center;
+    transition: 0.5s;
+    z-index: auto;
+    opacity: 0;
+  }
+
+  li {
+    margin: 16px 0;
+  }
+
+  ul.active {
+    opacity: 1;
+    left: 0;
+  }
+
+  ul.sticky {
+    background-color: #395b64;
   }
 }
 
